tests/samples/valid/DictAchievement.py
# cases where DictAchievement should unlock

# >> CASE
{'name': 'John Doe', 'age': 24}

# >> CASE
{
    'name': 'John Doe',
    'age': 24
}

# >> CASE
func({'name': 'John Doe', 'age': 24})
