tests/samples/invalid/DictAchievement.py
# cases where DictAchievement should not unlock

# >> CASE
{i: i for i in range(10)}

# >> CASE
{4, 5, 6}
